--- a/index.html
+++ b/index.html
@@ -145,34 +145,44 @@
     </header>
 
     <!-- Hero Section: KA(photo)RL -->
-    <section id="top" class="relative min-h-screen flex items-center justify-center overflow-hidden pt-20 bg-editorial-light">
-        <!-- Background -->
-        <div class="absolute inset-0 z-0">
-            <img src="https://picsum.photos/1920/1080?random=1" alt="Minimalist background" class="w-full h-full object-cover opacity-5">
-            <div class="absolute inset-0 bg-gradient-to-b from-transparent via-editorial-light/90 to-editorial-light"></div>
+<section id="top" class="relative min-h-screen flex items-center justify-center overflow-hidden pt-20 bg-editorial-light">
+    <!-- Background -->
+    <div class="absolute inset-0 z-0">
+        <img src="https://picsum.photos/1920/1080?random=1" alt="Minimalist background" class="w-full h-full object-cover opacity-5">
+        <div class="absolute inset-0 bg-gradient-to-b from-transparent via-editorial-light/90 to-editorial-light"></div>
+    </div>
+
+    <!-- Top-left CTA Buttons -->
+    <div class="absolute top-8 left-8 z-20 flex flex-col gap-4">
+        <a href="#projects" class="px-6 py-3 bg-accent-blue text-white font-lexend font-medium rounded-md hover:opacity-90 transition-opacity duration-300">
+            EXPLORE WORKS
+        </a>
+        <a href="#contact" class="px-6 py-3 border border-editorial-black text-editorial-black font-lexend font-medium rounded-md hover:opacity-90 transition-opacity duration-300">
+            CONNECT WITH ME
+        </a>
+    </div>
+
+    <!-- Hero Main -->
+    <div class="flex items-center justify-center gap-12 lg:gap-24 relative z-10">
+        <!-- KA -->
+        <h1 class="font-bricolage text-[10rem] md:text-[16rem] lg:text-[20rem] leading-none">KA</h1>
+
+        <!-- Portrait -->
+        <div class="relative w-48 md:w-64 lg:w-72 h-auto" style="transform: rotate(2deg);">
+            <img src="https://picsum.photos/500/600?random=2" alt="Portrait of Karl" class="w-full h-auto object-cover">
         </div>
 
-        <!-- Hero Main -->
-        <div class="flex items-center justify-center gap-12 lg:gap-24 relative z-10">
-            <!-- KA -->
-            <h1 class="font-bricolage text-[10rem] md:text-[16rem] lg:text-[20rem] leading-none">KA</h1>
+        <!-- RL -->
+        <h1 class="font-bricolage text-[10rem] md:text-[16rem] lg:text-[20rem] leading-none">RL</h1>
+    </div>
 
-            <!-- Portrait -->
-            <div class="relative w-48 md:w-64 lg:w-72 h-auto" style="transform: rotate(2deg);">
-                <img src="https://picsum.photos/500/600?random=2" alt="Portrait of Karl" class="w-full h-auto object-cover">
-            </div>
-
-            <!-- RL -->
-            <h1 class="font-bricolage text-[10rem] md:text-[16rem] lg:text-[20rem] leading-none">RL</h1>
-        </div>
-
-        <!-- Subtitle -->
-        <div class="absolute bottom-24 w-full text-center z-10">
-            <p class="typewriter font-lexend text-sm md:text-lg text-editorial-gray font-light">
-                English Language Studies • Creative Artist • Digital Designer
-            </p>
-        </div>
-    </section>
+    <!-- Subtitle -->
+    <div class="absolute bottom-24 w-full text-center z-10">
+        <p class="typewriter font-lexend text-sm md:text-lg text-editorial-gray font-light">
+            English Language Studies • Creative Artist • Digital Designer
+        </p>
+    </div>
+</section>
 
                     <!-- CTA Buttons -->
                     <div class="mt-12 flex flex-wrap gap-4 justify-center">
