--- a/index.html
+++ b/index.html
@@ -1,189 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <base target="_self">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Karl's Portfolio | Editorial Cyber Minimalist Design</title>
-    <meta name="description" content="Professional portfolio of Karl - English Language Studies student, artist, and creative professional with expertise in writing, design, and digital art.">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <!-- Google Fonts: Lexend -->
-    <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <script>
-        tailwind.config = {
-            theme: {
-                extend: {
-                    colors: {
-                        'editorial-black': '#121212',
-                        'editorial-gray': '#2d2d2d',
-                        'editorial-light': '#f8f8f8',
-                        'accent-blue': '#3a86ff',
-                        'accent-cyan': '#00bbf9',
-                        'glass-dark': 'rgba(18, 18, 18, 0.7)',
-                        'glass-light': 'rgba(45, 45, 45, 0.5)',
-                        'cyber-dark': '#0a0f19',
-                        'cyber-darker': '#050811',
-                    },
-                    fontFamily: {
-                        'lexend': ['Lexend', 'sans-serif'],
-                        'orbitron': ['Orbitron', 'sans-serif'],
-                    },
-                    backdropBlur: {
-                        'glass': '12px',
-                    },
-                    boxShadow: {
-                        'editorial': '0 8px 32px rgba(0, 0, 0, 0.1)',
-                        'editorial-strong': '0 12px 48px rgba(0, 0, 0, 0.15)',
-                        'glass': '0 8px 32px rgba(0, 0, 0, 0.3)',
-                    },
-                    animation: {
-                        'pulse-subtle': 'pulse-subtle 3s ease-in-out infinite',
-                        'float': 'float 6s ease-in-out infinite',
-                    },
-                    keyframes: {
-                        'pulse-subtle': {
-                            '0%, 100%': { 'opacity': '0.7' },
-                            '50%': { 'opacity': '1' },
-                        },
-                        'float': {
-                            '0%, 100%': { transform: 'translateY(0)' },
-                            '50%': { transform: 'translateY(-10px)' },
-                        }
-                    }
-                }
-            }
-        }
-    </script>
-    <style>
-        html {
-            scroll-behavior: smooth;
-        }
-        body {
-            background: linear-gradient(135deg, #ffffff 0%, #f8f8f8 50%, #f0f0f0 100%);
-            background-attachment: fixed;
-            color: #121212;
-        }
-        .glass-panel {
-            background: rgba(255, 255, 255, 0.7);
-            backdrop-filter: blur(12px);
-            border: 1px solid rgba(0, 0, 0, 0.1);
-        }
-        .glass-card {
-            background: rgba(255, 255, 255, 0.5);
-            backdrop-filter: blur(10px);
-            border: 1px solid rgba(0, 0, 0, 0.08);
-        }
-        .text-glow {
-            text-shadow: 0 0 10px rgba(58, 134, 255, 0.3);
-        }
-        .gradient-text {
-            background: linear-gradient(90deg, #121212, #2d2d2d);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
-        }
-        .gradient-border {
-            position: relative;
-            border: 2px solid transparent;
-            background: linear-gradient(#ffffff, #ffffff) padding-box,
-                        linear-gradient(90deg, #121212, #2d2d2d) border-box;
-        }
-        .nav-link::after {
-            content: '';
-            position: absolute;
-            width: 0;
-            height: 2px;
-            bottom: -5px;
-            left: 0;
-            background: linear-gradient(90deg, #121212, #2d2d2d);
-            transition: width 0.3s ease;
-        }
-        .nav-link:hover::after {
-            width: 100%;
-        }
-        .project-card {
-            transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-        }
-        .project-card:hover {
-            transform: translateY(-10px) scale(1.02);
-        }
-        .typewriter {
-            overflow: hidden;
-            border-right: 2px solid #2d2d2d;
-            white-space: nowrap;
-            animation: typing 3.5s steps(40, end), blink-caret 0.75s step-end infinite;
-        }
-        @keyframes typing {
-            from { width: 0 }
-            to { width: 100% }
-        }
-        @keyframes blink-caret {
-            from, to { border-color: transparent }
-            50% { border-color: #2d2d2d }
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Karl Dulce — Portfolio</title>
+
+  <!-- Tailwind -->
+  <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          fontFamily: {
+            lexend: ['Lexend', 'sans-serif'],
+          },
+        },
+      },
+    }
+  </script>
 </head>
-<body class="min-h-screen text-editorial-black font-lexend overflow-x-hidden">
-    <!-- Navigation -->
-    <header class="fixed top-0 left-0 right-0 z-50">
-        <nav class="glass-panel py-4 px-6">
-            <div class="container mx-auto flex flex-col md:flex-row justify-between items-center">
-                <div class="flex items-center space-x-2 mb-4 md:mb-0">
-                    <div class="w-3 h-3 rounded-full bg-editorial-black animate-pulse-subtle"></div>
-                    <h1 class="font-lexend text-xl font-bold text-editorial-black tracking-tight">KARL DULCE</h1>
-                </div>
-                <div class="flex space-x-8">
-                    <a href="#top" class="nav-link relative font-lexend text-sm font-medium hover:text-editorial-gray transition-colors duration-300">HOME</a>
-                    <a href="#about" class="nav-link relative font-lexend text-sm font-medium hover:text-editorial-gray transition-colors duration-300">ABOUT</a>
-                    <a href="#projects" class="nav-link relative font-lexend text-sm font-medium hover:text-editorial-gray transition-colors duration-300">PROJECTS</a>
-                    <a href="cv.html" class="nav-link relative font-lexend text-sm font-medium hover:text-editorial-gray transition-colors duration-300">CV</a>
-                    <a href="#contact" class="nav-link relative font-lexend text-sm font-medium hover:text-editorial-gray transition-colors duration-300">CONTACT</a>
-                </div>
-            </div>
-        </nav>
-    </header>
 
-    <!-- Hero Banner: KA(photo)RL -->
-    <section id="top" class="relative min-h-screen flex items-center justify-center overflow-hidden pt-20 bg-editorial-light">
-        <!-- Background -->
-        <div class="absolute inset-0 z-0">
-            <img src="https://picsum.photos/1920/1080?random=1" alt="Minimalist background" class="w-full h-full object-cover opacity-5">
-            <div class="absolute inset-0 bg-gradient-to-b from-transparent via-editorial-light/90 to-editorial-light"></div>
-        </div>
+<body class="font-lexend bg-white text-black overflow-x-hidden">
 
-        <!-- Top-left CTA Buttons -->
-        <div class="absolute top-8 left-8 z-20 flex flex-col gap-4">
-            <a href="#projects" class="px-6 py-3 bg-accent-blue text-white font-lexend font-medium rounded-md hover:opacity-90 transition-opacity duration-300">
-                EXPLORE WORKS
-            </a>
-            <a href="#contact" class="px-6 py-3 border border-editorial-black text-editorial-black font-lexend font-medium rounded-md hover:opacity-90 transition-opacity duration-300">
-                CONNECT WITH ME
-            </a>
-        </div>
+<!-- NAV -->
+<header class="fixed top-0 left-0 right-0 bg-white z-50">
+  <nav class="max-w-7xl mx-auto px-10 py-6 flex justify-between items-center">
+    <h1 class="text-lg font-semibold">Karl Dulce</h1>
+    <div class="flex gap-8 text-sm font-medium">
+      <a href="#top" class="hover:underline">Home</a>
+      <a href="#about" class="hover:underline">About</a>
+      <a href="#projects" class="hover:underline">Projects</a>
+      <a href="cv.html" class="hover:underline">CV</a>
+      <a href="#contact" class="hover:underline">Contact</a>
+    </div>
+  </nav>
+</header>
 
-        <!-- Hero Main -->
-        <div class="flex items-center justify-center gap-12 lg:gap-24 relative z-10">
-            <!-- KA -->
-            <h1 class="font-lexend text-6xl md:text-8xl lg:text-9xl font-black leading-none">KA</h1>
+<!-- HERO -->
+<section id="top" class="min-h-screen flex items-center pt-32">
+  <div class="max-w-7xl mx-auto px-10 w-full flex flex-col lg:flex-row items-center justify-between gap-20">
 
-            <!-- Portrait -->
-            <div class="relative w-36 h-36 md:w-48 md:h-48 lg:w-56 lg:h-56 rounded-full overflow-hidden shadow-2xl animate-float">
-                <img src="https://picsum.photos/300/300?random=2" alt="Portrait of Karl" class="w-full h-full object-cover">
-            </div>
+    <!-- TEXT -->
+    <div>
+      <p class="text-lg mb-4">Hi! I’m</p>
 
-            <!-- RL -->
-            <h1 class="font-lexend text-6xl md:text-8xl lg:text-9xl font-black leading-none">RL</h1>
-        </div>
+      <h1 class="text-[7rem] md:text-[9rem] font-extrabold leading-none tracking-tight">
+        KA<br>RL
+      </h1>
 
-        <!-- Subtitle -->
-        <div class="absolute bottom-24 w-full text-center z-10">
-            <p class="typewriter font-lexend text-xl md:text-2xl text-editorial-gray font-light">
-                English Language Studies • Creative Artist • Digital Designer
-            </p>
-        </div>
-    </section>
+      <div class="mt-10 flex gap-4">
+        <a href="#projects"
+           class="border border-black px-6 py-2 text-sm font-medium hover:bg-black hover:text-white transition">
+          Explore Works
+        </a>
+        <a href="#contact"
+           class="border border-black px-6 py-2 text-sm font-medium hover:bg-black hover:text-white transition">
+          Connect with me
+        </a>
+      </div>
+    </div>
 
-    <!-- Rest of your sections (About, Projects, etc.) remain unchanged -->
+    <!-- IMAGE -->
+    <div class="relative">
+      <img
+        src="YOUR_IMAGE.png"
+        alt="Karl portrait"
+        class="w-[300px] md:w-[380px] rotate-[-4deg]"
+      />
+    </div>
+
+  </div>
+</section>
+
+<!-- ABOUT -->
+<section id="about" class="py-32">
+  <div class="max-w-4xl mx-auto px-10">
+    <h2 class="text-4xl font-bold mb-8">About Me</h2>
+    <p class="text-lg leading-relaxed text-gray-700">
+      I am a third-year college student majoring in English Language Studies with
+      a deep passion for writing, visual art, and digital design. I enjoy working
+      at the intersection of creativity and analysis, whether through research,
+      storytelling, or visual communication.
+    </p>
+  </div>
+</section>
+
+<!-- PROJECTS -->
+<section id="projects" class="py-32 bg-gray-50">
+  <div class="max-w-7xl mx-auto px-10">
+    <h2 class="text-4xl font-bold mb-16">Projects</h2>
+
+    <div class="grid md:grid-cols-3 gap-12">
+      <a href="writing.html" class="group">
+        <h3 class="text-xl font-semibold group-hover:underline">Writing</h3>
+        <p class="text-gray-600 mt-2">Essays and poems</p>
+      </a>
+
+      <a href="artworks.html" class="group">
+        <h3 class="text-xl font-semibold group-hover:underline">Artwork</h3>
+        <p class="text-gray-600 mt-2">Digital and traditional works</p>
+      </a>
+
+      <a href="design.html" class="group">
+        <h3 class="text-xl font-semibold group-hover:underline">Design</h3>
+        <p class="text-gray-600 mt-2">Layouts and presentations</p>
+      </a>
+    </div>
+  </div>
+</section>
+
+<!-- CONTACT -->
+<section id="contact" class="py-32">
+  <div class="max-w-4xl mx-auto px-10">
+    <h2 class="text-4xl font-bold mb-8">Contact</h2>
+
+    <p class="text-lg mb-6">
+      Want to collaborate or just say hi?
+    </p>
+
+    <a href="mailto:karllexterdulce@gmail.com"
+       class="inline-block border border-black px-6 py-2 text-sm font-medium hover:bg-black hover:text-white transition">
+      karllexterdulce@gmail.com
+    </a>
+  </div>
+</section>
+
+<!-- FOOTER -->
+<footer class="py-12 text-center text-sm text-gray-500">
+  © 2025 Karl Dulce
+</footer>
+
 </body>
 </html>
