--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
 
-  <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;700&family=Bricolage+Grotesque:wght@600;700;800&display=swap" rel="stylesheet">
+  <!-- Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;600;700;800;900&display=swap" rel="stylesheet">
 
   <script>
     tailwind.config = {
@@ -17,12 +17,12 @@
         extend: {
           fontFamily: {
             lexend: ['Lexend', 'sans-serif'],
-            bricolage: ['Bricolage Grotesque', 'sans-serif'],
           },
           animation: {
             'slide-left': 'slideLeft 1s ease-out forwards',
             'slide-right': 'slideRight 1s ease-out forwards',
             'photo-in': 'photoIn 1.1s ease-out forwards',
+            'float-slow': 'floatSlow 7s ease-in-out infinite alternate',
           },
           keyframes: {
             slideLeft: {
@@ -37,6 +37,10 @@
               '0%': { transform: 'rotate(0deg) scale(0.95)', opacity: '0' },
               '100%': { transform: 'rotate(2deg) scale(1)', opacity: '1' },
             },
+            floatSlow: {
+              '0%': { transform: 'translateY(0)' },
+              '100%': { transform: 'translateY(-12px)' },
+            },
           },
         },
       },
@@ -44,99 +48,109 @@
   </script>
 </head>
 
-<body class="bg-white text-black overflow-x-hidden">
+<body class="font-lexend bg-white text-black overflow-x-hidden">
 
 <!-- NAV -->
 <header class="fixed top-0 left-0 right-0 z-50 bg-white">
   <nav class="max-w-7xl mx-auto px-10 py-6 flex justify-between items-center">
-    <h1 class="font-lexend font-medium text-sm tracking-wide">Karl Dulce</h1>
-    <div class="flex gap-8 text-xs uppercase tracking-widest">
-      <a href="#about" class="hover:opacity-60">About</a>
-      <a href="#projects" class="hover:opacity-60">Projects</a>
-      <a href="#contact" class="hover:opacity-60">Contact</a>
+    <h1 class="text-sm font-semibold tracking-wide">KARL DULCE</h1>
+    <div class="flex gap-8 text-xs font-medium uppercase">
+      <a href="#projects" class="hover:underline">Works</a>
+      <a href="#contact" class="hover:underline">Contact</a>
     </div>
   </nav>
 </header>
 
 <!-- HERO -->
-<section id="top" class="min-h-screen flex flex-col items-center justify-center pt-24 relative">
+<section id="top" class="min-h-screen flex items-center justify-center pt-28">
+  <div class="w-full max-w-7xl px-10">
 
-  <!-- KA PHOTO RL -->
-  <div class="flex items-center justify-center gap-4 md:gap-6">
+    <!-- KA PHOTO RL -->
+    <div class="flex items-center justify-center gap-4 md:gap-8">
 
-    <h1 class="font-bricolage text-[18vw] leading-none font-extrabold opacity-0 animate-slide-left">
-      KA
-    </h1>
+      <!-- KA -->
+      <h1 class="text-[20vw] md:text-[14vw] font-black leading-none opacity-0 animate-slide-left">
+        KA
+      </h1>
 
-    <div class="w-[22vw] max-w-[260px] opacity-0 animate-photo-in">
-      <img
-        src="images/karl_pogi.jpg"
-        alt="Portrait of Karl"
-        class="w-full h-auto object-cover"
-      />
+      <!-- PHOTO -->
+      <div class="w-[22vw] max-w-[260px] opacity-0 animate-photo-in animate-float-slow">
+        <img
+          src="images/karl_pogi.jpg"
+          alt="Portrait of Karl"
+          class="w-full h-auto object-cover"
+        />
+      </div>
+
+      <!-- RL -->
+      <h1 class="text-[20vw] md:text-[14vw] font-black leading-none opacity-0 animate-slide-right">
+        RL
+      </h1>
+
     </div>
 
-    <h1 class="font-bricolage text-[18vw] leading-none font-extrabold opacity-0 animate-slide-right">
-      RL
-    </h1>
+    <!-- SUBTITLE -->
+    <div class="mt-6 text-center">
+      <p class="text-xs md:text-sm tracking-wide text-gray-600">
+        English Language Studies • Creative Artist • Digital Designer
+      </p>
+    </div>
 
-  </div>
-
-  <!-- Subtitle + Buttons -->
-  <div class="mt-12 flex flex-col items-center gap-6">
-
-    <p class="text-[11px] tracking-widest uppercase text-center">
-      English Language Studies • Creative Artist • Digital Designer
-    </p>
-
-    <div class="flex gap-4">
-      <a href="#projects"
-         class="text-xs uppercase tracking-widest border border-black px-5 py-2 hover:bg-black hover:text-white transition">
+    <!-- CTA -->
+    <div class="mt-10 flex gap-6 justify-center">
+      <a
+        href="#projects"
+        class="border border-black px-6 py-2 text-xs font-medium uppercase hover:bg-black hover:text-white transition"
+      >
         Explore Works
       </a>
-      <a href="#contact"
-         class="text-xs uppercase tracking-widest border border-black px-5 py-2 hover:bg-black hover:text-white transition">
+      <a
+        href="#contact"
+        class="border border-black px-6 py-2 text-xs font-medium uppercase hover:bg-black hover:text-white transition"
+      >
         Connect With Me
       </a>
     </div>
 
   </div>
-
-</section>
-
-<!-- ABOUT -->
-<section id="about" class="py-40">
-  <div class="max-w-3xl mx-auto px-10">
-    <h2 class="font-bricolage text-4xl mb-10">About</h2>
-    <p class="font-lexend text-lg leading-relaxed text-gray-700">
-      I’m a third-year English Language Studies student interested in writing,
-      visual art, and digital design. My work focuses on how language, visuals,
-      and structure shape meaning.
-    </p>
-  </div>
 </section>
 
 <!-- PROJECTS -->
-<section id="projects" class="py-40 bg-gray-50">
-  <div class="max-w-6xl mx-auto px-10">
-    <h2 class="font-bricolage text-4xl mb-20">Projects</h2>
+<section id="projects" class="py-32">
+  <div class="max-w-7xl mx-auto px-10">
+    <h2 class="text-3xl font-bold mb-16">Projects</h2>
 
-    <div class="grid md:grid-cols-3 gap-16 text-lg">
-      <a href="writing.html" class="hover:underline">Writing</a>
-      <a href="artworks.html" class="hover:underline">Artwork</a>
-      <a href="design.html" class="hover:underline">Design</a>
+    <div class="grid md:grid-cols-3 gap-12">
+      <a href="writing.html" class="group">
+        <h3 class="text-lg font-semibold group-hover:underline">Writing</h3>
+        <p class="text-gray-600 text-sm mt-2">Essays & poems</p>
+      </a>
+
+      <a href="artworks.html" class="group">
+        <h3 class="text-lg font-semibold group-hover:underline">Artwork</h3>
+        <p class="text-gray-600 text-sm mt-2">Digital & traditional</p>
+      </a>
+
+      <a href="design.html" class="group">
+        <h3 class="text-lg font-semibold group-hover:underline">Design</h3>
+        <p class="text-gray-600 text-sm mt-2">Layouts & visuals</p>
+      </a>
     </div>
   </div>
 </section>
 
 <!-- CONTACT -->
-<section id="contact" class="py-40">
-  <div class="max-w-3xl mx-auto px-10">
-    <h2 class="font-bricolage text-4xl mb-10">Contact</h2>
+<section id="contact" class="py-32 border-t border-black">
+  <div class="max-w-4xl mx-auto px-10">
+    <h2 class="text-3xl font-bold mb-8">Contact</h2>
+
+    <p class="text-gray-700 mb-6 text-sm">
+      Want to collaborate or just say hi?
+    </p>
 
     <a
       href="mailto:karllexterdulce@gmail.com"
-      class="inline-block text-sm tracking-widest uppercase border border-black px-6 py-3 hover:bg-black hover:text-white transition"
+      class="inline-block border border-black px-6 py-2 text-xs font-medium hover:bg-black hover:text-white transition"
     >
       karllexterdulce@gmail.com
     </a>
@@ -144,7 +158,7 @@
 </section>
 
 <!-- FOOTER -->
-<footer class="py-16 text-center text-xs text-gray-400">
+<footer class="py-12 text-center text-xs text-gray-500">
   © 2025 Karl Dulce
 </footer>
 
