--- a/index.html
+++ b/index.html
@@ -7,6 +7,31 @@
 
   <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
+  animation: {
+  'slide-left': 'slideLeft 1s ease-out forwards',
+  'slide-right': 'slideRight 1s ease-out forwards',
+  'photo-in': 'photoIn 1.1s ease-out forwards',
+  'float-slow': 'floatSlow 7s ease-in-out infinite alternate',
+},
+keyframes: {
+  slideLeft: {
+    '0%': { transform: 'translateX(-80px)', opacity: '0' },
+    '100%': { transform: 'translateX(0)', opacity: '1' },
+  },
+  slideRight: {
+    '0%': { transform: 'translateX(80px)', opacity: '0' },
+    '100%': { transform: 'translateX(0)', opacity: '1' },
+  },
+  photoIn: {
+    '0%': { transform: 'rotate(0deg) scale(0.95)', opacity: '0' },
+    '100%': { transform: 'rotate(2deg) scale(1)', opacity: '1' },
+  },
+  floatSlow: {
+    '0%': { transform: 'translateY(0)' },
+    '100%': { transform: 'translateY(-12px)' },
+  },
+},
+
 
   <!-- Font -->
   <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;600;700;800;900&display=swap" rel="stylesheet">
@@ -75,12 +100,13 @@
 
       <!-- PHOTO -->
       <div class="w-[22vw] max-w-[260px] opacity-0 animate-photo-in animate-float-slow">
-        <img
-          src="images/karl_pogi.jpg"
-          alt="Portrait of Karl"
-          class="w-full h-auto object-cover"
-        />
-      </div>
+  <img
+    src="images/karl_pogi.jpg"
+    alt="Portrait of Karl"
+    class="w-full h-auto object-cover"
+  />
+</div>
+
 
       <!-- RL -->
       <h1 class="text-[20vw] md:text-[14vw] font-black leading-none opacity-0 animate-slide-right">
